# sentinel2-ingestion-pipeline

./: .gitignore  LICENSE  pyproject.toml  requirements-lock.txt
