[project]
name = "sentinel2-ingestion-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pystac-client>=0.7",
    "rasterio>=1.3",
    "rio-cogeo>=4.0",
    "shapely>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "boto3>=1.34",
    "pystac>=1.9",
    "apache-airflow>=2.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",        # linter + formatter
    "mypy>=1.9",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]  # errors, pyflakes, isort